<resources>
    <string name="app_name">SMK BPPI</string>
    <string name="logo_name">SMK BPPI</string>
    <string name="slogan_name">Bersih Hijau Berkarakter</string>
    <string name="powered_by">Powered By 12 RPL 1 2019–2020</string>
    <string name="first_slide_title">Selamat Datang</string>
    <string name="second_slide_title">Informasi</string>
    <string name="third_slide_title">Jenjang</string>
    <string name="fourth_slide_name">For Your Information</string>
    <string name="first_slide_desc">Hallo! Selamat bergabung di SMK BPPI. Sekolah swasta yang mampu bersaing dengan sekolah negeri dan mampu membuat anak pintar</string>
    <string name="second_slide_desc">Kamu bisa cari informasi seputar SMK BPPI Baleendah di aplikasi ini</string>
    <string name="third_slide_desc">Di SMK BPPI ini ada 3 jurusan nih, yaitu: RPL, TKJ, dan PKM</string>
    <string name="fourth_slide_desc">Aplikasi ini dikembangkan oleh Dypta, Naufal, Rezky, Wahyu dari kelas 12 RPL 1. Have Fun :D</string>
    <string name="skip_btn">Lewati</string>
    <string name="next_btn">Lanjut</string>
    <string name="let_get_started">Mulai!</string>
    <string name="absen">Guru</string>
    <string name="ekskul">Ekskul</string>
    <string name="event">Event</string>
    <string name="administrasi">Denah</string>
    <string name="car_rent">Car Rent</string>
    <string name="hospitals">Hospital</string>
    <string name="featured_locations">Jurusan SMK BPPI</string>
    <string name="featured_locations_descriptions">Terdapat 3 jurusan yang diminati banyak orang dan memiliki beragam prospek kerja</string>
    <string name="most_viewed_locations">Berita Terbaru</string>
    <string name="categories">Kategori</string>
    <string name="view_all">View All</string>
    <string name="search_text">Cari</string>
    <string name="nav_home">BERANDA</string>
    <string name="nav_search">CARI</string>
    <string name="nav_all_categories">KATEGORI</string>
    <string name="nav_add_missing_place">ADD MISSING PLACE</string>
    <string name="nav_login">Masuk</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_logout">Keluar</string>
    <string name="nav_share">Bagikan</string>
    <string name="nav_rate_us">Beri ulasan</string>
    <string name="expand_all">Tampilkan Semua</string>
    <string name="retailer_heading">Grow\nYour Skill</string>
    <string name="retailer_tag_line">Kita bakal bantu kalian buat ngembangin skill kalian!</string>
    <string name="login">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="how_we_work">Mari Bergabung</string>
    <string name="remember_me">Ingat Saya?</string>
    <string name="forget_password">Lupa Password</string>
    <string name="forget_password_detail">Provide your accounts email for which you want to reset your password!</string>
    <string name="create_account">Buat Akun</string>
    <string name="create_account_heading">Buat\nAkun</string>
    <string name="ok">OK</string>
    <string name="enter_full_name">Nama Lengkap</string>
    <string name="enter_username">Username</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone_number">Nomor Telepon</string>
    <string name="enter_password">Kata Sandi</string>
    <string name="choose_gender">Pilih jenis kelamin</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="other">Lainnya</string>
    <string name="select_your_age">Pilih umur kamu</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on</string>
    <string name="make_selection">Make Selection</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_details">Your identity has been verified! Set your new password!</string>
    <string name="password_updated">Password\nUpdated</string>
    <string name="password_updated_success_message">Your password has been updated!</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_code">Verify Code</string>
    <string name="label_beranda">Beranda</string>
    <string name="label_pengumuman">Pengumuman</string>
    <string name="label_jadwal">Jadwal</string>
    <string name="label_profile">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string-array name="images">
        <item>image1</item>
        <item>image1</item>
        <item>image1</item>
    </string-array>
    <string-array name="names">
        <item>Name1</item>
        <item>Name1</item>
        <item>Name1</item>
    </string-array>
    <string-array name="descriptions">
        <item>Desc1</item>
        <item>Desc1</item>
        <item>Desc1</item>
    </string-array>
    <string name="title_activity_contoh">Contoh</string>
    <string name="tab_text_1">RPL</string>
    <string name="tab_text_2">TKJ</string>
    <string name="tab_text_3">PKM</string>
    <string name="title_activity_tabbed_example">TabbedExample</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="dataGuruAntonJ">Anton Jaenudin, Sp.D</string>
</resources>