<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    android:padding="30dp"
    android:scrollbars="none"
    tools:context=".Common.LoginSignUp.RetailerStartUpScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/retailer_circle_black"
            app:tint="@color/colorOnPrimaryText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorOnPrimaryText"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_light"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textColor="@color/colorOnSecondaryText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:onClick="callLoginScreen"
                android:textColor="@color/colorPrimaryText"
                android:background="@color/colorPrimary"
                android:transitionName="transition_login"/>


            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimaryText"
                android:layout_weight="1"
                android:onClick="callSignUpScreen"
                android:background="@color/colorPrimary"
                android:text="@string/sign_up"
                android:transitionName="transition_sign_up"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:text="@string/how_we_work" />

    </LinearLayout>





</ScrollView>