<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.VerifyOTPActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/general_close_icon"
            app:tint="@color/colorPrimaryIcon"
            android:clickable="true"
            android:onClick="closeScreen"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_code_text"
            android:textSize="100sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification_text"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryText"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_description_text"
            android:textSize="16sp"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorPrimaryText"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:fontFamily="@font/muli_light"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/verify_otp_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+623434343"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimaryText"
            android:textAlignment="center"
            android:fontFamily="@font/muli_light"
            android:layout_gravity="center"/>

        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="45dp"
            android:itemBackground="@color/colorSurface"
            app:itemHeight="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorOnPrimaryText"
            app:lineColor="@color/colorPrimaryText"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/colorOnPrimaryText"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button1"
            android:text="@string/verify_code"
            android:onClick="verifyOTPScreen"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</ScrollView>