<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.SignUpActivity"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    android:scrollbars="none"
    android:transitionName="transition_sign_up">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sign_up_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="5dp"
            android:src="@drawable/general_back_button"
            android:transitionName="transition_back_arrow_btn"
            app:tint="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/sign_up_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_heading"
            android:textColor="@color/colorPrimaryText"
            android:textSize="40sp"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"
            android:transitionName="transition_title_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                app:startIconDrawable="@drawable/field_full_name_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorPrimaryText"
                app:hintTextColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryText"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorPrimaryText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                app:startIconDrawable="@drawable/field_username_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorPrimaryText"
                app:hintTextColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryText"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorPrimaryText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:startIconDrawable="@drawable/field_email_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorPrimaryText"
                app:hintTextColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryText"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorPrimaryText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:startIconDrawable="@drawable/field_password_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorPrimaryText"
                app:hintTextColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryText"
                app:endIconTint="@color/colorPrimaryText"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorPrimaryText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/sign_up_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:background="@color/colorSecondaryOne"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:onClick="call2ndSignUpScreen"
            android:elevation="5dp"
            android:transitionName="transition_next_btn"/>

        <Button
            android:id="@+id/sign_up_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="?attr/selectableItemBackground"
            android:layout_marginTop="20dp"
            android:onClick="callLoginScreen"
            android:textColor="@color/colorSecondaryText"
            android:clickable="true"
            android:fontFamily="@font/muli_light"
            android:elevation="5dp"
            android:transitionName="transition_login_btn"/>

    </LinearLayout>

</ScrollView>